--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,12 @@ spring.product.datasource.username=postgres
 spring.product.datasource.password=1234
 spring.product.datasource.driver-class-name= org.postgresql.Driver
 
+##--- connect personDB ---
+#spring.datasource.url= jdbc:postgresql://localhost:5432/Test1
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name= org.postgresql.Driver
+
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.data.jpa.generate-ddl= true
@@ -18,6 +24,7 @@ spring.data.jpa.hibernate.ddl-auto= update
 spring.batch.initialize-schema=ALWAYS
 
 spring.batch.job.enabled=false
+spring.main.allow-bean-definition-overriding=true
 server.port=8080
 
 logging.file.name= application.log
